--- a/Nginx/Dockerfile
+++ b/Nginx/Dockerfile
@@ -1,2 +1,6 @@
-FROM nginx
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+FROM nginx:1.16.0-alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
